[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvtools"
version = "0.1.0"
description = "Personal data structures and machine learning utilities"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]