[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rvtools"
version = "0.1.0"
description = "Ryan's data structures and ML utilities toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ryan Van de Berghe", email = "ryan.van.de.berghe@emory.edu" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]